# comfyui-universal-trigger-toggle

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  universal_trigger_toggle.py
js/: universal_trigger_toggle.js
