[project]
name = "comfyui-universal-trigger-toggle"
description = "A standalone custom node for ComfyUI that provides an interactive tag-based interface to enable/disable trigger words from any LoRA loader or gallery node."
version = "1.0.1"
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/revisionhiep-create/comfyui-universal-trigger-toggle"

[tool.comfy]
PublisherId = "revybevy"
DisplayName = "comfyui-universal-trigger-toggle"
Icon = ""
